--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: ghcr.io/smartstore/smartstore-linux
     container_name: web
     ports:
-      - "80:80"
+      - "88:80"
     restart: unless-stopped
     depends_on:
       - db
@@ -15,8 +15,8 @@ services:
     container_name: mysql
     environment:
       #MYSQL_DATABASE: smartstore
-      MYSQL_USER: "smartstore"
-      MYSQL_PASSWORD: "smartstore"
+      #MYSQL_USER: "root"
+      MYSQL_PASSWORD: "Smartstore2022!"
       MYSQL_ROOT_PASSWORD: "Smartstore2022!"
     ports:
       - '3307:3306'
