--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.4"
 services:
   web:
-    image: ghcr.io/smartstore/smartstore-linux
+    image: ghcr.io/smartstore/smartstore-linux:latest
     container_name: web
     ports:
       - "80:80"
